# hiposa

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  copyright.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: example_simple_function_approximation-alpine-hierarchical.ipynb  example_simple_function_approximation.ipynb
hiposa/: __init__.py  point_selector.py  poisson_disc_sampling.py  poisson_tiler.py
tests/: test_basic_sampling.py
