[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiposa"
version = "0.1.0"
description = "High-Performance Open Source Analysis"
readme = "README.md"
authors = [
   {name = "Petrus Zwart", email = "PHZwart@lbl.gov"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/hiposa/hiposa"
"Bug Tracker" = "https://github.com/phzwart/hiposa/issues"

[tool.setuptools]
packages = ["hiposa"]
